# git-worktree-superproject

./: .gitignore  CLAUDE-NEXT-SESSION-PROMPT.md  CLAUDE-TEST-COVERAGE-SUMMARY.md  CLAUDE.md  MIGRATION-GUIDE.md  NEXT-SESSION-PROMPT.md  PER-WORKSPACE-CONFIG-DESIGN.md  README.md  README_TESTING.md  README_XDIST.md  TEST-COVERAGE-SUMMARY.md  TEST-DRIVEN-DEVELOPMENT-PROMPT.md  flake.nix  install-completion  pyproject.toml  pytest-result-bar-migration-plan.md  test-completion.sh  workspace  workspace-completion.bash  workspace-completion.zsh  workspace.conf
test/: __init__.py  conftest.py  pytest_result_bar.py  test_broken_repos.py  test_completions.py  test_config.py  test_config_errors.py  test_integration_workflows.py  test_missing_coverage.py  test_per_workspace_config.py  test_superproject_configurations.py  test_superproject_edge_cases.py  test_workspace.py  test_workspace_advanced.py  test_worktree_operations.py
test/fixtures/: complex.conf  invalid.conf  simple.conf
